--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -32,13 +32,14 @@ library
       RBNF.GraphAnalysis.Expand
       RBNF.GraphAnalysis.IRs
       RBNF.GraphAnalysis.Reduce
-      
+
   other-modules:
       Paths_RBNF
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , mtl
     , text
     , containers
   default-language: Haskell2010
