--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -28,10 +28,8 @@ source-repository head
 library
   exposed-modules:
       RBNF
-      RBNF.Semantics
-      RBNF.GraphAnalysis.Expand
-      RBNF.GraphAnalysis.IRs
-      RBNF.GraphAnalysis.Reduce
+      RBNF.Symbols
+      RBNF.Grammar
 
   other-modules:
       Paths_RBNF
@@ -42,6 +40,8 @@ library
     , mtl
     , text
     , containers
+    , lens
+    , array
   default-language: Haskell2010
 
 executable RBNF-exe
