--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 99f973a445609cc3c86825214aae9cd8bb17bdd5793602615879c49f0bc5e033
+-- hash: 4c68ea0ca069fe7928129816c4f0c4d000baef50daad61acf9f1f08835567ac5
 
 name:           RBNF
 version:        0.1.0.0
@@ -33,6 +33,7 @@ library
       RBNF.Grammar
       RBNF.Graph
       RBNF.LeftRecur
+      RBNF.LookAHead
       RBNF.Semantics
       RBNF.Symbols
   other-modules:
@@ -46,6 +47,7 @@ library
     , lens
     , mtl
     , text
+    , transformers
     , vector
   default-language: Haskell2010
 
@@ -64,6 +66,7 @@ executable RBNF-exe
     , lens
     , mtl
     , text
+    , transformers
     , vector
   default-language: Haskell2010
 
@@ -83,5 +86,6 @@ test-suite RBNF-test
     , lens
     , mtl
     , text
+    , transformers
     , vector
   default-language: Haskell2010
