TODO: lookahead dispatching optimization(check necessary conds instead the sufficient ones)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,15 +8,16 @@
             "type": "shell",
             "command": "stack build",
             "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "group": "build"
         },
         {
             "label": "test Haskell",
             "type": "shell",
-            "command": "stack test"
+            "command": "stack test",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
