--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1f40483e4bffcad377873c2d6093c1e28b819af9e5182854135d2f29ca55f8cc
+-- hash: 6b94ce446fdcb0ac3eb0dd4d1aefc393a7019eaf65d1f32097ce094d2c818520
 
 name:           RBNF
 version:        0.1.0.0
@@ -44,9 +44,9 @@ library
       Paths_RBNF
   hs-source-dirs:
       src
-  ghc-options: -fno-warn-partial-type-signatures
   build-depends:
-      aeson
+      RSolve
+    , aeson
     , base >=4.7 && <5
     , containers
     , lens
@@ -63,9 +63,10 @@ executable RBNF-exe
       Paths_RBNF
   hs-source-dirs:
       app
-  ghc-options: -fno-warn-partial-type-signatures -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       RBNF
+    , RSolve
     , aeson
     , base >=4.7 && <5
     , containers
@@ -84,9 +85,10 @@ test-suite RBNF-test
       Paths_RBNF
   hs-source-dirs:
       test
-  ghc-options: -fno-warn-partial-type-signatures -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       RBNF
+    , RSolve
     , aeson
     , base >=4.7 && <5
     , containers
