--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: bdd6b2f6f9301f37838067cfbeef7cc6f75c248aa986c95fe9b5429a5419f501
+-- hash: ef3f2ccbd9a0ed7f41987fba76913a2c3ffc95c70e6c9414680e66c7c9eb045b
 
 name:           RBNF
 version:        0.1.0.0
@@ -33,6 +33,7 @@ library
       RBNF.CodeGenIRs.ABuiltins
       RBNF.CodeGenIRs.B
       RBNF.CodeGenIRs.BInfer
+      RBNF.CodeGenIRs.HM
       RBNF.Dump
       RBNF.Grammar
       RBNF.Graph
