--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,20 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/thautwarm/RBNF#readme>
 
+default-extensions:
+- ViewPatterns
+- DeriveGeneric
+- DeriveFunctor
+- DeriveTraversable
+- LambdaCase
+- TemplateHaskell
+- DuplicateRecordFields
+- StandaloneDeriving
+- ExistentialQuantification
+- MultiParamTypeClasses
+- NamedFieldPuns
+- PartialTypeSignatures
+- FlexibleInstances
 dependencies:
 - base >= 4.7 && < 5
 - mtl
