--- a/package.yaml
+++ b/package.yaml
@@ -43,13 +43,14 @@ dependencies:
 - aeson
 - transformers
 - prettyprinter
+- utf8-string
 - RSolve
 library:
   source-dirs:
   - src
 
-# ghc-options:
-#   - -fno-warn-partial-type-signatures
+ghc-options:
+  - -fno-warn-partial-type-signatures
 
 executables:
   RBNF-exe:
