--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9a43b5345e4e1704952332a01a78b77ec80c156dd01290d3222142031bb2e626
+-- hash: bf441617a30060070766441318827a9f10022208e2dede42aaa7577e46ceedaf
 
 name:           RBNF
 version:        0.1.0.0
@@ -75,12 +75,36 @@ library
     , vector
   default-language: Haskell2010
 
-executable RBNF-exe
+executable rbnf-lex
   main-is: Main.hs
   other-modules:
       Paths_RBNF
   hs-source-dirs:
-      app
+      lex
+  default-extensions: ViewPatterns DeriveGeneric DeriveFunctor DeriveTraversable LambdaCase TemplateHaskell DuplicateRecordFields StandaloneDeriving ExistentialQuantification MultiParamTypeClasses NamedFieldPuns PartialTypeSignatures FlexibleInstances
+  ghc-options: -fno-warn-partial-type-signatures -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      RBNF
+    , RSolve
+    , aeson
+    , base >=4.7 && <5
+    , containers
+    , lens
+    , mtl
+    , parsec
+    , prettyprinter
+    , text
+    , transformers
+    , utf8-string
+    , vector
+  default-language: Haskell2010
+
+executable rbnf-pgen
+  main-is: Main.hs
+  other-modules:
+      Paths_RBNF
+  hs-source-dirs:
+      pgen
   default-extensions: ViewPatterns DeriveGeneric DeriveFunctor DeriveTraversable LambdaCase TemplateHaskell DuplicateRecordFields StandaloneDeriving ExistentialQuantification MultiParamTypeClasses NamedFieldPuns PartialTypeSignatures FlexibleInstances
   ghc-options: -fno-warn-partial-type-signatures -threaded -rtsopts -with-rtsopts=-N
   build-depends:
