--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/home/redbq/Software/Anaconda/bin/python"
+    "python.pythonPath": "C:\\Users\\twshe\\Software\\Anaconda\\python.exe"
 
 }
