--- a/RBNF.cabal
+++ b/RBNF.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a91292d8202fc200bfae790377885d46dad5b87e398e5876040f7732fae2ee25
+-- hash: 5e5ae3678f9e9012d9baca2350cb73441af7ac1ab000c50569005a44b0fecaa2
 
 name:           RBNF
 version:        0.1.0.0
@@ -65,6 +65,13 @@ library
     , transformers
     , utf8-string
     , vector
+  if os(darwin)
+    ghc-options: -Wall -O2
+    ld-options: -pthread -Wall
+  else
+    ghc-options: -Wall -O2 -static
+    cc-options: -static
+    ld-options: -static -pthread -Wall
   default-language: Haskell2010
 
 executable fff-lex
@@ -88,6 +95,13 @@ executable fff-lex
     , transformers
     , utf8-string
     , vector
+  if os(darwin)
+    ghc-options: -Wall -O2
+    ld-options: -pthread -Wall
+  else
+    ghc-options: -Wall -O2 -static
+    cc-options: -static
+    ld-options: -static -pthread -Wall
   default-language: Haskell2010
 
 executable fff-pgen
@@ -111,6 +125,13 @@ executable fff-pgen
     , transformers
     , utf8-string
     , vector
+  if os(darwin)
+    ghc-options: -Wall -O2
+    ld-options: -pthread -Wall
+  else
+    ghc-options: -Wall -O2 -static
+    cc-options: -static
+    ld-options: -static -pthread -Wall
   default-language: Haskell2010
 
 test-suite RBNF-test
@@ -135,4 +156,11 @@ test-suite RBNF-test
     , transformers
     , utf8-string
     , vector
+  if os(darwin)
+    ghc-options: -Wall -O2
+    ld-options: -pthread -Wall
+  else
+    ghc-options: -Wall -O2 -static
+    cc-options: -static
+    ld-options: -static -pthread -Wall
   default-language: Haskell2010
