--- a/package.yaml
+++ b/package.yaml
@@ -42,12 +42,17 @@ when:
       - -pthread
       - -Wall
     else:
-      ghc-options: -Wall -O2 -static
-      cc-options: -static
+      ghc-options: -Wall -O2
       ld-options:
-      - -static
       - -pthread
       - -Wall
+      # FIXME: some linux distros cannot statically link libgmp
+      # ghc-options: -Wall -O2 -static
+      # cc-options: -static
+      # ld-options:
+      # - -static
+      # - -pthread
+      # - -Wall
 
 dependencies:
 - base >= 4.7 && < 5
@@ -90,16 +95,3 @@ executables:
     dependencies:
     - RBNF
     - base >=4.7 && <5
-
-tests:
-  RBNF-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - RBNF
-    - base >=4.7 && <5
-    - containers
