--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-sudo: true
-language: haskell
-
 git:
   depth: 5
 
@@ -9,12 +6,11 @@ cache:
   - "$HOME/.cabal/store"
   - "$HOME/.stack"
   - "$HOME/.ghc"
-  - "$TRAVIS_BUILD_DIR/.stack-work"
 
 python: 3.7
 env: STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml"
 
-matrix:
+jobs:
   include:
   - os: linux
   - os: osx
@@ -26,18 +22,36 @@ matrix:
   - os: osx
     osx_image: xcode10
 
-install:
-  - |
-    # install stack
-    curl -sSL https://get.haskellstack.org/ | sh
 
-    # build project with stack
-    stack --version
-    stack build --test --bench --no-run-tests --no-run-benchmarks
+before_install:
+# Using compiler above sets CC to an invalid value, so unset it
+- unset CC
+
+# We want to always allow newer versions of packages when building on GHC HEAD
+- CABALARGS=""
+- if [ "x$GHCVER" = "xhead" ]; then CABALARGS=--allow-newer; fi
+
+# Download and unpack the stack executable
+- export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$HOME/.local/bin:/opt/alex/$ALEXVER/bin:/opt/happy/$HAPPYVER/bin:$HOME/.cabal/bin:$PATH
+- mkdir -p ~/.local/bin
+- |
+  if [ `uname` = "Darwin" ]
+  then
+    travis_retry curl --insecure -L https://get.haskellstack.org/stable/osx-x86_64.tar.gz | tar xz --strip-components=1 --include '*/stack' -C ~/.local/bin
+  else
+    travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  fi
+  # Use the more reliable S3 mirror of Hackage
+  mkdir -p $HOME/.cabal
+  echo 'remote-repo: hackage.haskell.org:http://hackage.fpcomplete.com/' > $HOME/.cabal/config
+  echo 'remote-repo-cache: $HOME/.cabal/packages' >> $HOME/.cabal/config
 
 script:
-  - |
-    echo "no test"
+- |
+  set -ex
+  stack --no-terminal build
+  stack --no-terminal install
+  set +ex
 
 notifications:
   email: false
